nymea-plugins (1.7.106-1) buster focal jammy; urgency=medium
 * updated easee integration
 * EMH SMGW as main meter

 -- Leonhard Heizinger <l.heizinger@consolinno.de> Tue, 02 Jul 2024 7:50:53 +0200

nymea-plugins (1.7.105) buster focal jammy; urgency=medium

* Renamed fems integration to fenecon
* Fixed displayed values in fenecon integration
* Fenecon inverter now shown in app
* Add plugin for Askoma Askoheat+ heating rod.


 -- Luis Reber <l.reber@consolinno.de> Tue, 04 Jun 2024 08:02:53 +0200

nymea-plugins (1.7.104) buster focal jammy; urgency=medium

* Go-e charger plugin: Disconnected state slower to trigger. Fixed hardware charge current limit not set correctly for api version 1.
* Go-e charger plugin: fixed hardware charge current limit not set correctly for api version 1.

 -- Sebastian Ringer <s.ringer@consolinno.de> Fri, 29 Apr 2024 15:46:53 +0200

nymea-plugins (1.7.103) buster focal jammy; urgency=medium

* Go-e charger plugin: added code to prevent unreasonable values in power and energy values.

 -- Sebastian Ringer <s.ringer@consolinno.de> Fri, 19 Apr 2024 16:20:53 +0200

nymea-plugins (1.7.102) buster focal jammy; urgency=medium

* Keba discovery updated to recognize new models.

 -- Sebastian Ringer <s.ringer@consolinno.de> Di, 2 Apr 2024 16:53:53 +0200

nymea-plugins (1.7.101) buster focal jammy; urgency=medium

* EV charger interface fix

 -- Leonhard Heizinger <l.heizinger@consolinno.de> Fr, 9 Feb 2024 7:50:53 +0200

nymea-plugins (1.7.100-2) buster focal jammy; urgency=medium

* Adapt to new versioning schema

 -- Florian Knab <f.knab@consolinno.de> Thu, 19 Sep 2023 7:50:53 +0200

nymea-plugins (1.7.100-1) jammy; urgency=medium

  * Add plugin for kostal pico inverter

 -- Michael Menner <m.menner@consolinno.de>  Wed, 23 Aug 2023 10:00:41 +0100

nymea-plugins (1.7.0) jammy; urgency=medium

  [ Michael Zanetti ]
  * Netatmo: Add min/max values for co2 sensors
  * Add support for Shelly Plus 2PM